# wide_apple

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 37180e28eef5_initial_migration.py
app/: auth.py  crud.py  main.py  models.py  schemas.py
app/crud/: __init__.py  fruit.py  trade.py  user.py  vendor.py
app/models/: __init__.py  fruit.py  user.py  vendor.py
app/routers/: auth.py  fruit.py  trade.py  vendor.py
app/schemas/: fruit.py  trade.py  vendor.py
app/utils/: seed.py
data/: fruits.json  vendors.json
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  constants.ts
frontend/src/components/: AuthFormContainer.tsx  CardContainer.tsx  FruitList.tsx  LoginForm.tsx  NavBar.tsx  RegisterForm.tsx  TradeForm.tsx  VendorPanel.tsx
frontend/src/components/common/: AuthFormContainer.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  Trade.tsx
frontend/src/utils/: tokenUtils.ts
src/app/: auth.py  database.py  main.py
src/app/crud/: fruit.py  trade.py  user.py  vendor.py
src/app/models/: fruit.py  user.py  vendor.py
src/app/routers/: auth.py  fruit.py  trade.py  vendor.py
src/app/schemas/: __init__.py  auth.py  fruit.py  trade.py  user.py  vendor.py
src/app/utils/: seed.py
src/app/utils/data/: fruits.json  vendors.json
tests/: test_auth.py  test_fruit.py  test_trade.py  test_vendor.py
